final corretions