@@ -3,12 +3,18 @@ package com.br.fiap.fortaleza.sabor.infrastructure.mapper;
 import com.br.fiap.fortaleza.sabor.domain.address.Address;
 import com.br.fiap.fortaleza.sabor.domain.enums.TypeEnum;
 import com.br.fiap.fortaleza.sabor.domain.user.User;
-import com.br.fiap.fortaleza.sabor.infrastructure.controller.dto.*;
+import com.br.fiap.fortaleza.sabor.infrastructure.controller.dto.AddressDto;
+import com.br.fiap.fortaleza.sabor.infrastructure.controller.dto.UpdateRequestDto;
+import com.br.fiap.fortaleza.sabor.infrastructure.controller.dto.UserRequestDto;
+import com.br.fiap.fortaleza.sabor.infrastructure.controller.dto.UserResponseDto;
 import com.br.fiap.fortaleza.sabor.infrastructure.persistence.AddressEntity;
 import com.br.fiap.fortaleza.sabor.infrastructure.persistence.UserEntity;
 import com.br.fiap.fortaleza.sabor.infrastructure.persistence.enums.TypeEntityEnum;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
 import java.util.List;
@@ -16,6 +22,7 @@ import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+@ExtendWith(MockitoExtension.class)
 class UserEntityMapperTest {
 
     private UserEntityMapper mapper;
@@ -26,6 +33,7 @@ class UserEntityMapperTest {
     }
 
     @Test
+    @DisplayName("Should map UserRequestDto to User.")
     void shouldMapUserRequestDtoToUser() {
         UserRequestDto dto = new UserRequestDto(
                 "Nome Teste", "email@test.com", "loginTeste", "senha",
@@ -38,10 +46,11 @@ class UserEntityMapperTest {
         assertNotNull(user);
         assertEquals("Nome Teste", user.getNome());
         assertEquals(TypeEnum.DONO, user.getTipo());
-        assertEquals("Rua A", user.getAddress().get(0).getRua());
+        assertEquals("Rua A", user.getAddress().getFirst().getRua());
     }
 
     @Test
+    @DisplayName("Should map UpdateRequestDto to User.")
     void shouldMapUpdateRequestDtoToUser() {
         UpdateRequestDto dto = new UpdateRequestDto(
                 "Nome Update", "update@email.com", "novaSenha", TypeEnum.CLIENTE,
@@ -58,6 +67,7 @@ class UserEntityMapperTest {
     }
 
     @Test
+    @DisplayName("Should map User to UserEntity")
     void shouldMapUserToUserEntity() {
         Address address = new Address("Rua B", "Bairro C", "Comp", 99, "Estado F", "Cidade D", 112233);
         User user = new User("Nome", "email", "login", "senha", LocalDate.now(), TypeEnum.DONO, List.of(address));
@@ -66,10 +76,11 @@ class UserEntityMapperTest {
 
         assertEquals(user.getNome(), entity.getNome());
         assertEquals(TypeEntityEnum.DONO, entity.getTipo());
-        assertEquals("Rua B", entity.getEnderecos().get(0).getRua());
+        assertEquals("Rua B", entity.getEnderecos().getFirst().getRua());
     }
 
     @Test
+    @DisplayName("Should map UserEntity to User.")
     void shouldMapUserEntityToUser() {
         AddressEntity address = new AddressEntity("Rua 1", "Bairro 2", "Comp", 1, "Estado", "Cidade", 101010);
         UserEntity entity = new UserEntity("João", "joao@email.com", "joao123", "123", LocalDate.now(), TypeEntityEnum.CLIENTE, List.of(address));
@@ -78,10 +89,11 @@ class UserEntityMapperTest {
 
         assertEquals("João", user.getNome());
         assertEquals(TypeEnum.CLIENTE, user.getTipo());
-        assertEquals("Rua 1", user.getAddress().get(0).getRua());
+        assertEquals("Rua 1", user.getAddress().getFirst().getRua());
     }
 
     @Test
+    @DisplayName("Should map User to UserResponseDto")
     void shouldMapUserToUserResponseDto() {
         Address address = new Address("Rua R", "Bairro B", "Comp", 10, "Estado", "Cidade", 123000);
         User user = new User("Maria", "maria@email.com", "maria123", "123", LocalDate.now(), TypeEnum.CLIENTE, List.of(address));
@@ -90,10 +102,11 @@ class UserEntityMapperTest {
 
         assertEquals("Maria", dto.nome());
         assertEquals(TypeEnum.CLIENTE, dto.tipo());
-        assertEquals("Rua R", dto.address().get(0).rua());
+        assertEquals("Rua R", dto.address().getFirst().rua());
     }
 
     @Test
+    @DisplayName("Should map optional User to UserResponseDto.")
     void shouldMapOptionalUserToUserResponseDto() {
         Address address = new Address("Rua Q", "Bairro C", "Comp", 1, "Estado", "Cidade", 1010);
         User user = new User("Carlos", "carlos@email.com", "carlos123", "123", LocalDate.now(), TypeEnum.DONO, List.of(address));
@@ -101,20 +114,22 @@ class UserEntityMapperTest {
         UserResponseDto dto = mapper.updateToUserResponseDto(Optional.of(user));
 
         assertEquals("Carlos", dto.nome());
-        assertEquals("Rua Q", dto.address().get(0).rua());
+        assertEquals("Rua Q", dto.address().getFirst().rua());
     }
 
     @Test
+    @DisplayName("Should throw when optional User is empty.")
     void shouldThrowWhenOptionalUserIsEmpty() {
         assertThrows(IllegalArgumentException.class, () -> mapper.updateToUserResponseDto(Optional.empty()));
     }
 
     @Test
+    @DisplayName("Should map list of Address to list of AddressEntity.")
     void shouldMapListAddressToListAddressEntity() {
         Address address = new Address("Rua S", "Bairro S", "Comp", 7, "Estado", "Cidade", 444444);
         List<AddressEntity> entities = mapper.toAddressEntityList(List.of(address));
 
         assertEquals(1, entities.size());
-        assertEquals("Rua S", entities.get(0).getRua());
+        assertEquals("Rua S", entities.getFirst().getRua());
     }
 }
